removes method for search coordinates, minor fixes